--- a/INFO/1.md
+++ b/INFO/1.md
@@ -1,53 +1,7 @@
 ---
 layout: page
-title: AI
+title: 1) Featured
 permalink: /FOSS/1/
 ---
-## AI Prompt Resources for Job Hunting, Resumes, Side Hustles & Income
+# HOT Front Page Content: Featured items from sister applications based on relevance and timeliness
 
-## Table of Contents
-- [Introduction](#introduction)
-- [Comprehensive Prompt Collections](#comprehensive-prompt-collections-often-include-relevant-categories)
-- [Resources with Specific Focus on Career/Income](#resources-with-specific-focus-or-strong-sections-on-careerincome)
-- [Tips for Using These Resources](#tips-for-using-these-resources)
-
-## Introduction
-
-Finding the right prompts can significantly enhance how you use AI for career advancement and exploring income opportunities. Below is a curated list of resources, including popular GitHub repositories and other collections, where you can find prompts tailored to these goals.
-
-**Keep in Mind:** The field of AI and prompt engineering is rapidly evolving. While these resources are popular or well-regarded, always test and refine prompts for your specific needs and the AI model you are using.
-
-## Comprehensive Prompt Collections (Often Include Relevant Categories)
-
-1. **Awesome ChatGPT Prompts (GitHub)**  
-   * **Link:** [https://github.com/f/awesome-chatgpt-prompts](https://github.com/f/awesome-chatgpt-prompts)  
-   * **Relevance:** This is one of the most popular and extensive collections of prompts for ChatGPT. While broad, it contains sections and numerous user-submitted prompts that can be adapted for acting as a job interviewer, writing cover letters, generating business ideas, marketing copy, and more. You'll need to browse or search within the repository for specific career/business applications.  
-2. **Prompt Engineering Guide (GitHub & Website)**  
-   * **Link (GitHub):** [https://github.com/dair-ai/Prompt-Engineering-Guide](https://github.com/dair-ai/Prompt-Engineering-Guide)  
-   * **Link (Website):** [https://www.promptingguide.ai/](https://www.promptingguide.ai/)  
-   * **Relevance:** While more focused on *how* to engineer prompts, this guide provides foundational knowledge and examples that are crucial for creating effective prompts for *any* task, including complex ones like drafting business plans, refining resume sections, or preparing for interviews. It includes examples and links to datasets and tools.  
-3. **FlowGPT (Website)**  
-   * **Link:** [https://flowgpt.com/](https://flowgpt.com/)  
-   * **Relevance:** This platform allows users to share and discover prompts across various categories. It has dedicated sections or tags for Career, Resume, Marketing, Business, and Finance, making it a good place to find user-generated prompts specifically for job hunting, business development, and financial tasks.
-
-## Resources with Specific Focus (or Strong Sections) on Career/Income
-
-4. **Learn Prompting (Website/Discord)**  
-   * **Link:** [https://learnprompting.org/](https://learnprompting.org/)  
-   * **Relevance:** Offers free courses and a community focused on prompt engineering. Their materials often cover practical applications, and the community (especially on Discord) is a place where users discuss prompts for various use cases, including professional development, content creation for businesses, and task automation.  
-5. **Various Blog Posts & Articles:**  
-   * **Relevance:** Many tech blogs, career advice sites (like The Muse, LinkedIn's blog), and AI-focused newsletters regularly publish articles with specific prompts for job searching (e.g., "AI prompts to ace your next interview," "Using ChatGPT to write your resume") or business ideation ("ChatGPT prompts for brainstorming startup ideas").  
-   * **How to Find:** Use search engines with queries like:  
-     * "ChatGPT prompts for cover letter"  
-     * "AI prompts for business plan"  
-     * "Best prompts for resume update AI"  
-     * "Generate side hustle ideas using AI prompts"
-
-## Tips for Using These Resources
-
-* **Search Within Repos:** Use GitHub's search functionality within large repositories (like awesome-chatgpt-prompts) using keywords like "resume," "interview," "business idea," "marketing," "cover letter," etc.  
-* **Adapt and Iterate:** Prompts are starting points. You'll often need to tweak them based on the AI model you're using (GPT-4, Claude, Gemini, etc.) and your specific context. Add details about your background, the job you're applying for, or the type of business you envision.  
-* **Combine Prompts:** Chain prompts together for more complex tasks. For example, first generate business ideas, then ask the AI to evaluate the pros and cons of one specific idea, and then ask it to draft an initial marketing tagline.  
-* **Specify the Persona:** Tell the AI to act as a specific expert (e.g., "Act as a hiring manager at a tech company," "Act as a startup business consultant," "Act as a professional resume writer").
-
-By exploring these resources and experimenting with different prompts, you can leverage AI more effectively to achieve your career and financial goals.
