--- a/INFO/3.md
+++ b/INFO/3.md
@@ -1,174 +1,8 @@
 ---
 layout: page
-title: GUIDE
+title: 3) News
 permalink: /FOSS/3/
 ---
-# Rock Rapids GUIDE Civic Information Resource
+# Important News & Announcements
 
-## Table of Contents
-- [Introduction](#introduction)
-- [Vision and Purpose](#vision-and-purpose)
-- [Civic Information Framework](#civic-information-framework)
-- [Service Provider Directory](#service-provider-directory)
-- [Emergency Notification System](#emergency-notification-system)
-- [Community Calendar Integration](#community-calendar-integration)
-- [Education and School Resources](#education-and-school-resources)
-- [Religious and Spiritual Organization Directory](#religious-and-spiritual-organization-directory)
-- [Governance and Public Meeting Information](#governance-and-public-meeting-information)
-- [Minimal Viable Prototype Development Roadmap](#minimal-viable-prototype-development-roadmap)
-- [Design Philosophy](#design-philosophy)
-- [Sister Applications](#sister-applications)
-
-## Introduction
-
-RockRapids.GUIDE serves as a comprehensive civic information hub connecting residents with essential community services, municipal updates, and important local announcements. This platform centralizes information that everyone is expected to know but may be difficult to locate, creating a single authoritative source for civic, educational, religious, and service provider information in Rock Rapids.
-
-## Vision and Purpose
-
-RockRapids.GUIDE will function as a comprehensive civic information hub that connects residents with essential community services, municipal updates, and important local announcements to enhance daily life in Rock Rapids. This centralized platform addresses several critical needs:
-
-1. **Information Fragmentation**: Consolidating information currently scattered across multiple websites, social media pages, and physical bulletin boards
-2. **Service Awareness**: Ensuring residents know about available services and how to access them
-3. **Civic Transparency**: Providing clear information about government operations and decisions
-4. **Crisis Communication**: Establishing a reliable channel for emergency information during disruptions
-
-By creating a single authoritative source for civic information, RockRapids.GUIDE helps ensure that all community members, regardless of their technical proficiency or social connections, have equal access to essential information and services.
-
-## Civic Information Framework
-
-RockRapids.GUIDE organizes information into a structured framework designed for clarity and ease of navigation:
-
-- **Government Services**: City departments, county services, and state resources
-- **Utilities**: Information about water, electricity, gas, sewage, and telecommunications
-- **Infrastructure**: Roads, transportation, public works, and community facilities
-- **Public Safety**: Police, fire, EMS, and emergency management resources
-- **Health Services**: Hospitals, clinics, mental health resources, and public health information
-- **Education**: Schools, libraries, and educational support services
-- **Community Organizations**: Non-profits, service clubs, and support groups
-- **Religious Institutions**: Churches, religious organizations, and faith-based services
-- **Legal Resources**: Courts, legal aid, and regulatory information
-
-This organizing framework ensures comprehensive coverage of all essential civic information while maintaining logical categorization for intuitive user navigation.
-
-## Service Provider Directory
-
-A cornerstone feature of RockRapids.GUIDE is a comprehensive service provider directory that includes:
-
-- **Contact Information**: Phone numbers, email addresses, physical locations, and hours of operation
-- **Service Descriptions**: Clear explanations of available services and eligibility requirements
-- **Application Procedures**: Step-by-step guides for accessing services or applying for programs
-- **Documentation Requirements**: Lists of necessary forms and identification for service access
-- **Fee Structures**: Transparent information about costs and payment options
-- **Accessibility Features**: Details about accommodations for individuals with disabilities
-
-This searchable directory will be regularly audited and updated to ensure accuracy, with a straightforward process for service providers to submit corrections or updates as needed.
-
-## Emergency Notification System
-
-RockRapids.GUIDE incorporates a robust emergency notification system designed to keep residents informed during critical situations:
-
-- **Service Disruption Alerts**: Notifications about road closures, water main repairs, power outages, or other utility issues
-- **Weather Emergencies**: Updates during severe weather events, including safety instructions
-- **Public Health Notices**: Information about health concerns, outbreaks, or precautionary measures
-- **Public Safety Incidents**: Alerts about accidents, hazardous materials, or other safety threats
-- **Recovery Resources**: Guidance on available assistance following community emergencies
-
-These alerts will be prominently displayed on the platform with clear visual indicators of urgency and importance, ensuring critical information stands out from routine content.
-
-## Community Calendar Integration
-
-An interactive community calendar provides a consolidated view of civic events and activities:
-
-- **Public Meetings**: City council sessions, planning commission meetings, and other governmental gatherings
-- **School Events**: Academic calendar, sporting events, and special school activities
-- **Religious Services**: Regular worship schedules and special religious observances
-- **Community Forums**: Public discussion sessions on local issues and initiatives
-- **Utility Maintenance**: Scheduled service work that might affect residents
-
-The calendar will support filtering by category, allowing users to focus on the types of events most relevant to their needs while maintaining awareness of the broader community schedule.
-
-## Education and School Resources
-
-A dedicated section for educational resources provides:
-
-- **School District Information**: Administrative contacts, enrollment procedures, and district boundaries
-- **Academic Calendar**: School year schedule, holidays, and examination periods
-- **Program Offerings**: Details about regular curricula, special education, gifted programs, and extracurricular activities
-- **Transportation Details**: Bus routes, pick-up/drop-off times, and transportation eligibility
-- **Parent Resources**: Access to forms, handbooks, and communication channels with educators
-- **Educational Support Services**: Tutoring, counseling, and other academic assistance programs
-
-This comprehensive approach ensures that families have easy access to the information they need to navigate the educational system effectively.
-
-## Religious and Spiritual Organization Directory
-
-Rock Rapids' diverse faith communities are represented through:
-
-- **Congregation Listings**: Contact information and leadership for local churches and religious organizations
-- **Service Schedules**: Regular worship times and special observances
-- **Community Programs**: Faith-based support groups, youth activities, and outreach initiatives
-- **Facility Availability**: Information about spaces available for community use or private events
-- **Spiritual Support Resources**: Counseling, visitation services, and crisis assistance
-
-This section recognizes the important role that faith communities play in the social fabric of Rock Rapids while providing practical information for both members and newcomers.
-
-## Governance and Public Meeting Information
-
-To promote civic engagement and transparency, RockRapids.GUIDE provides:
-
-- **Government Structure**: Explanation of local governance organization and responsibilities
-- **Elected Officials**: Profiles and contact information for city council members and other elected representatives
-- **Meeting Schedules**: Calendar of upcoming public meetings with agendas when available
-- **Decision Records**: Archives of meeting minutes, ordinances, and public notices
-- **Citizen Participation Guides**: Information on how residents can engage with local governance through committees, public comment, or volunteer opportunities
-
-This emphasis on governance information helps demystify local political processes and encourages greater community involvement in civic decision-making.
-
-## Minimal Viable Prototype Development Roadmap
-
-1. **Prerequisite Research**: Before launching anything, understand the [design philosophy](#design-philosophy) and gather intelligence on already available sources of civic information.
-
-2. **Architecture Development**: Build a general knowledgebase architecture to support a meta-directory of service providers and civic resources, using the [technical architecture](https://rockrapids.github.io/communication/2025/03/29/RockRapidsApps.html#technical-architecture-1) with Remix as the primary framework.
-
-3. **Notification System**: Develop a local resident notification system for city service alerts and important community announcements with appropriate urgency indicators.
-
-4. **Content Management System**: Create a simple, sparse content management system allowing multiple organizations to post updates through a standardized process.
-
-5. **Calendar Integration**: Build a community calendar with filtering by organization type (government, church, school) that aggregates events from multiple sources.
-
-6. **Directory Implementation**: Implement a searchable directory of local services and emergency contacts with comprehensive filtering options.
-
-7. **Mobile Optimization**: Create mobile-responsive layouts optimized for quick information access during emergencies when users may have limited connectivity.
-
-8. **Testing Phase**: Test the platform with a limited group of community organizations before full public launch to identify issues and refine functionality.
-
-## Design Philosophy
-
-As with all Rock Rapids applications, RockRapids.GUIDE adheres to a design philosophy focused on sustainability and practicality. This approach emphasizes:
-
-- **Reusing what has worked and will continue to be used**, rather than re-inventing new solutions
-- **Connecting existing systems and filling gaps** to create greater value
-- **Building simple solutions that future volunteers can maintain and improve**
-
-This philosophy is elaborated in several key strategic documents:
-
-- [Integrate Necessary Existing and Future Datastores](https://rockrapids.github.io/communication/2025/03/31/RockRapidsApps-Step0-1.html): Leveraging existing data sources while preparing for evolving technologies
-- [Understand Local Participation In Online Platforms](https://rockrapids.github.io/communication/2025/03/31/RockRapidsApps-Step0-2.html): Building on established digital behavior patterns
-- [Evaluate Local Platforms and Their Reach](https://rockrapids.github.io/communication/2025/03/31/RockRapidsApps-Step0-3.html): Understanding the existing digital landscape
-- [Design For Maintainability and Extensibility](https://rockrapids.github.io/communication/2025/03/31/RockRapidsApps-Step0-4.html): Creating systems that can be sustained by volunteer contributors
-- [Think About Where the App Ecosystem Will Be Built and Then Live](https://rockrapids.github.io/communication/2025/03/31/RockRapidsApps-Step0-5.html): Considering the practical aspects of hosting and maintenance
-
-## Sister Applications
-
-RockRapids.GUIDE is part of a suite of specialized applications, each addressing specific aspects of community life:
-
-- [Rockrapids.INFO](https://rockrapids.github.io/FOSS/0/): The central hub and gateway to all Rock Rapids applications
-- [Rockrapids.ART](https://rockrapids.github.io/FOSS/1/): Showcasing local arts, crafts, and creative endeavors
-- [Rockrapids.FUN](https://rockrapids.github.io/FOSS/2/): Highlighting recreational activities and entertainment options
-- [Rockrapids.SHOP](https://rockrapids.github.io/FOSS/4/): Featuring retail promotions and shopping events
-- [Rockrapids.STORE](https://rockrapids.github.io/FOSS/5/): Listing marketplace items and local products for sale
-- [Rockrapids.WORK](https://rockrapids.github.io/FOSS/6/): Connecting people with employment opportunities
-- [Rockrapids.XYZ](https://rockrapids.github.io/FOSS/7/): Coordinating volunteer activities and recognition
-
-Together, these applications form a comprehensive digital ecosystem designed to serve the diverse needs of the Rock Rapids community.
-
+Important, need-to-know recent news from local government, schools, churches, organizations, and businesses
