--- a/INFO/8.md
+++ b/INFO/8.md
@@ -1,9 +1,9 @@
 ---
 layout: page
-title: INFO
-permalink: /FOSS/0/
+title: 8) About
+permalink: /Info/8/
 ---
-# Rock Rapids INFO Central Hub
+# Explaining The Rock Rapids INFO Central Hub
 
 ## Table of Contents
 - [Introduction](#introduction)
