--- a/INFO/2.md
+++ b/INFO/2.md
@@ -1,165 +1,6 @@
 ---
 layout: page
-title: FUN
+title: 2) Calendar
 permalink: /FOSS/2/
 ---
-
-# Rock Rapids FUN Recreation and Entertainment
-
-## Table of Contents
-- [Introduction](#introduction)
-- [Vision and Purpose](#vision-and-purpose)
-- [Recreation Landscape in Rock Rapids](#recreation-landscape-in-rock-rapids)
-- [Event Discovery System](#event-discovery-system)
-- [Seasonal Activity Showcases](#seasonal-activity-showcases)
-- [User Experience and Navigation](#user-experience-and-navigation)
-- [Regional Tourism Integration](#regional-tourism-integration)
-- [Community Participation Tools](#community-participation-tools)
-- [Content Curation Strategy](#content-curation-strategy)
-- [Minimal Viable Prototype Development Roadmap](#minimal-viable-prototype-development-roadmap)
-- [Design Philosophy](#design-philosophy)
-- [Sister Applications](#sister-applications)
-
-## Introduction
-
-RockRapids.FUN serves as the definitive digital guide to recreational activities, entertainment options, and special events in and around Rock Rapids. The platform is designed to help residents and visitors discover exciting ways to enjoy their time in the area, from outdoor adventures to community celebrations, enhancing quality of life and supporting local tourism.
-
-## Vision and Purpose
-
-RockRapids.FUN will serve as the definitive digital guide to recreational activities, entertainment options, and special events in and around Rock Rapids, helping residents and visitors discover exciting ways to enjoy their time in the area. This comprehensive platform fulfills several key purposes:
-
-1. **Information Centralization**: Consolidating recreational opportunities currently scattered across multiple sources
-2. **Accessibility Enhancement**: Making it easier for everyone to discover events and activities that match their interests and schedules
-3. **Tourism Support**: Providing visitors with compelling reasons to explore Rock Rapids and extend their stays
-4. **Community Connection**: Fostering social engagement through shared experiences and group activities
-
-By offering a comprehensive view of the recreational landscape, RockRapids.FUN enhances quality of life for residents while supporting local businesses and attractions that depend on visitor engagement.
-
-## Recreation Landscape in Rock Rapids
-
-Rock Rapids offers a diverse array of recreational opportunities throughout the year:
-
-- **Outdoor Recreation**: Parks, trails, water activities, sports fields, and natural areas
-- **Entertainment Venues**: Theaters, performance spaces, and social gathering spots
-- **Community Events**: Festivals, parades, fairs, and seasonal celebrations
-- **Organized Sports**: League competitions, tournaments, and pickup games
-- **Classes and Workshops**: Recreational learning opportunities for various interests and age groups
-- **Day Trips**: Activities within easy driving distance of Rock Rapids
-
-This variety of options ensures there are engaging activities available for residents and visitors of all ages, interests, and abilities, with RockRapids.FUN making these opportunities more discoverable and accessible.
-
-## Event Discovery System
-
-At the core of RockRapids.FUN is a sophisticated event discovery system with multiple ways to find activities:
-
-- **Category-Based Browsing**: Organizing activities by type (outdoor recreation, family-friendly, dining experiences, nightlife, etc.)
-- **Timeframe Filtering**: Sorting by when events are happening (today, this weekend, upcoming month, etc.)
-- **Map-Based Exploration**: Visualizing events and activities based on geographic location
-- **Audience Targeting**: Filtering for specific demographics (kids, teens, adults, seniors, families)
-- **Special Needs Options**: Highlighting accessibility features for those with mobility or other challenges
-
-The platform will incorporate intuitive search and filtering tools that make it simple for users to quickly find relevant options based on their specific interests and availability.
-
-## Seasonal Activity Showcases
-
-RockRapids.FUN will feature curated seasonal content to highlight the changing recreational landscape throughout the year:
-
-- **Winter**: Snow sports, indoor activities, holiday celebrations, and cold-weather traditions
-- **Spring**: Outdoor awakening events, planting activities, spring festivals, and early-season sports
-- **Summer**: Water recreation, outdoor concerts, farmers markets, and vacation opportunities
-- **Fall**: Harvest festivals, fall foliage tours, hunting season activities, and Halloween events
-
-These seasonal showcases ensure that the platform remains fresh and relevant year-round, highlighting the best activities for current conditions and traditions.
-
-## User Experience and Navigation
-
-The RockRapids.FUN user experience emphasizes ease of discovery and detailed information:
-
-- **Interactive Calendar**: Providing a visual overview of upcoming events and activities
-- **"Happening Now" Feature**: Highlighting immediate entertainment options for spontaneous planning
-- **Favorites and Reminders**: Allowing users to save events of interest and receive notifications
-- **Personalized Recommendations**: Suggesting activities based on past interests and seasonal relevance
-- **Detailed Listings**: Providing comprehensive information including times, costs, contact details, and requirements
-
-The navigation system is designed to be intuitive for users of all ages and technical abilities, ensuring that finding fun activities never becomes a frustrating experience itself.
-
-## Regional Tourism Integration
-
-RockRapids.FUN will facilitate regional tourism by:
-
-- **Integration with Location Data**: Helping visitors plan efficient itineraries based on proximity to major regional attractions like Lake Okoboji or Sioux Falls
-- **Accommodation Information**: Linking to local lodging options for overnight visitors
-- **Trip Planning Tools**: Enabling the creation of multi-day itineraries combining local and regional attractions
-- **Travel Logistics**: Providing transportation information, driving times, and directions
-
-This regional perspective recognizes Rock Rapids' position within the broader northwest Iowa recreational landscape, encouraging visitors to use the town as a base for exploring the area.
-
-## Community Participation Tools
-
-The platform will foster community engagement through:
-
-- **User-Generated Content**: Allowing residents and visitors to share photos, reviews, and personal experiences
-- **Rating System**: Enabling feedback on activities and events to help others make informed decisions
-- **Social Sharing**: Integrated tools for sharing events on social media and through direct messaging
-- **Suggestion Mechanism**: Simple process for community members to propose new listings or updates
-
-These participation features transform RockRapids.FUN from a static directory into a dynamic community resource enriched by the experiences and knowledge of its users.
-
-## Content Curation Strategy
-
-To ensure comprehensive and high-quality information, RockRapids.FUN will implement a multi-faceted content strategy:
-
-- **Automated Aggregation**: Using APIs to pull event data from platforms like Eventbrite, Facebook, and local calendars
-- **Manual Submission**: Providing forms for event organizers to directly submit their activities
-- **Editorial Coverage**: Featuring in-depth spotlights on selected events and regular activities
-- **Community Sourcing**: Encouraging user submissions of hidden gems and informal gatherings
-- **Regular Auditing**: Systematically reviewing listings to ensure accuracy and relevance
-
-This combined approach ensures that the platform captures both formal, organized events and the informal recreational opportunities that might otherwise go unpublicized.
-
-## Minimal Viable Prototype Development Roadmap
-
-1. **Prerequisite Research**: Before launching anything, understand the [design philosophy](#design-philosophy) and gather intelligence on already available sources of information about local recreational activities and events.
-
-2. **Architecture Development**: Create a general knowledgebase architecture to support a simple meta-directory of activities with fields for location, schedule, category, and description, using the [technical architecture](https://rockrapids.github.io/communication/2025/03/29/RockRapidsApps.html#technical-architecture-1) with Remix as the primary framework.
-
-3. **Calendar Interface**: Develop an intuitive calendar view with filters for activity type, age appropriateness, and indoor/outdoor status to simplify discovery.
-
-4. **Real-Time Features**: Implement a "happening now" feature that displays current and immediate upcoming events for spontaneous planning.
-
-5. **Submission System**: Build a simple submission form to assist local businesses and organizations in adding their events to the platform.
-
-6. **Recommendation Engine**: Develop basic AI functionality for a recommendation engine based on user preferences and seasonal relevance.
-
-7. **Initial Content**: Launch with a core set of recurring events and special seasonal activities as initial content to demonstrate the platform's value.
-
-## Design Philosophy
-
-As with all Rock Rapids applications, RockRapids.FUN adheres to a design philosophy focused on sustainability and practicality. This approach emphasizes:
-
-- **Reusing what has worked and will continue to be used**, rather than re-inventing new solutions
-- **Connecting existing systems and filling gaps** to create greater value
-- **Building simple solutions that future volunteers can maintain and improve**
-
-This philosophy is elaborated in several key strategic documents:
-
-- [Integrate Necessary Existing and Future Datastores](https://rockrapids.github.io/communication/2025/03/31/RockRapidsApps-Step0-1.html): Leveraging existing data sources while preparing for evolving technologies
-- [Understand Local Participation In Online Platforms](https://rockrapids.github.io/communication/2025/03/31/RockRapidsApps-Step0-2.html): Building on established digital behavior patterns
-- [Evaluate Local Platforms and Their Reach](https://rockrapids.github.io/communication/2025/03/31/RockRapidsApps-Step0-3.html): Understanding the existing digital landscape
-- [Design For Maintainability and Extensibility](https://rockrapids.github.io/communication/2025/03/31/RockRapidsApps-Step0-4.html): Creating systems that can be sustained by volunteer contributors
-- [Think About Where the App Ecosystem Will Be Built and Then Live](https://rockrapids.github.io/communication/2025/03/31/RockRapidsApps-Step0-5.html): Considering the practical aspects of hosting and maintenance
-
-## Sister Applications
-
-RockRapids.FUN is part of a suite of specialized applications, each addressing specific aspects of community life:
-
-- [Rockrapids.INFO](https://rockrapids.github.io/FOSS/0/): The central hub and gateway to all Rock Rapids applications
-- [Rockrapids.ART](https://rockrapids.github.io/FOSS/1/): Showcasing local arts, crafts, and creative endeavors
-- [Rockrapids.GUIDE](https://rockrapids.github.io/FOSS/3/): Providing civic, school, church, and service provider information
-- [Rockrapids.SHOP](https://rockrapids.github.io/FOSS/4/): Featuring retail promotions and shopping events
-- [Rockrapids.STORE](https://rockrapids.github.io/FOSS/5/): Listing marketplace items and local products for sale
-- [Rockrapids.WORK](https://rockrapids.github.io/FOSS/6/): Connecting people with employment opportunities
-- [Rockrapids.XYZ](https://rockrapids.github.io/FOSS/7/): Coordinating volunteer activities and recognition
-
-Together, these applications form a comprehensive digital ecosystem designed to serve the diverse needs of the Rock Rapids community.
-
+## Community Calendar: A consolidated view of upcoming events from multiple sources
