--- a/INFO/7.md
+++ b/INFO/7.md
@@ -1,179 +1,55 @@
 ---
 layout: page
-title: XYZ
-permalink: /FOSS/7/
+title: 7) Search/AI
+permalink: /INFO/7/
 ---
-# Rock Rapids XYZ Volunteer Coordination Platform
+# Searches/AI Resources
+
+## AI Prompt Resources for Job Hunting, Resumes, Side Hustles & Income
 
 ## Table of Contents
 - [Introduction](#introduction)
-- [Vision and Purpose](#vision-and-purpose)
-- [Volunteer Opportunity Database](#volunteer-opportunity-database)
-- [Volunteer Profile System](#volunteer-profile-system)
-- [Real-Time Contribution Tracking](#real-time-contribution-tracking)
-- [Recognition and Celebration Framework](#recognition-and-celebration-framework)
-- [Team Formation and Coordination](#team-formation-and-coordination)
-- [Skill Development Resources](#skill-development-resources)
-- [Meaningful Impact Measurement](#meaningful-impact-measurement)
-- [Minimal Viable Prototype Development Roadmap](#minimal-viable-prototype-development-roadmap)
-- [Design Philosophy](#design-philosophy)
-- [Sister Applications](#sister-applications)
+- [Comprehensive Prompt Collections](#comprehensive-prompt-collections-often-include-relevant-categories)
+- [Resources with Specific Focus on Career/Income](#resources-with-specific-focus-or-strong-sections-on-careerincome)
+- [Tips for Using These Resources](#tips-for-using-these-resources)
 
 ## Introduction
 
-RockRapids.XYZ serves as the central hub for volunteer engagement in Rock Rapids, connecting community needs with willing helpers while celebrating the spirit of voluntary service that strengthens the town's social fabric. This platform recognizes that volunteers are the XYZ—the people who fill the gaps to make everything work—and focuses on efficiently coordinating and optimizing the engagement and satisfaction of volunteer time.
+Finding the right prompts can significantly enhance how you use AI for career advancement and exploring income opportunities. Below is a curated list of resources, including popular GitHub repositories and other collections, where you can find prompts tailored to these goals.
 
-## Vision and Purpose
+**Keep in Mind:** The field of AI and prompt engineering is rapidly evolving. While these resources are popular or well-regarded, always test and refine prompts for your specific needs and the AI model you are using.
 
-RockRapids.XYZ will serve as the central hub for volunteer engagement in Rock Rapids, connecting community needs with willing helpers while celebrating the spirit of voluntary service that strengthens the town's social fabric. This platform fulfills several essential functions:
+## Comprehensive Prompt Collections (Often Include Relevant Categories)
 
-1. **Need Matching**: Connecting willing volunteers with organizations and projects requiring assistance
-2. **Skill Optimization**: Ensuring volunteers are deployed where their abilities create maximum impact
-3. **Recognition**: Highlighting and celebrating volunteer contributions to the community
-4. **Coordination**: Facilitating efficient organization of team-based volunteer activities
-5. **Skill Building**: Supporting volunteers in developing new capabilities through their service
+1. **Awesome ChatGPT Prompts (GitHub)**  
+   * **Link:** [https://github.com/f/awesome-chatgpt-prompts](https://github.com/f/awesome-chatgpt-prompts)  
+   * **Relevance:** This is one of the most popular and extensive collections of prompts for ChatGPT. While broad, it contains sections and numerous user-submitted prompts that can be adapted for acting as a job interviewer, writing cover letters, generating business ideas, marketing copy, and more. You'll need to browse or search within the repository for specific career/business applications.  
+2. **Prompt Engineering Guide (GitHub & Website)**  
+   * **Link (GitHub):** [https://github.com/dair-ai/Prompt-Engineering-Guide](https://github.com/dair-ai/Prompt-Engineering-Guide)  
+   * **Link (Website):** [https://www.promptingguide.ai/](https://www.promptingguide.ai/)  
+   * **Relevance:** While more focused on *how* to engineer prompts, this guide provides foundational knowledge and examples that are crucial for creating effective prompts for *any* task, including complex ones like drafting business plans, refining resume sections, or preparing for interviews. It includes examples and links to datasets and tools.  
+3. **FlowGPT (Website)**  
+   * **Link:** [https://flowgpt.com/](https://flowgpt.com/)  
+   * **Relevance:** This platform allows users to share and discover prompts across various categories. It has dedicated sections or tags for Career, Resume, Marketing, Business, and Finance, making it a good place to find user-generated prompts specifically for job hunting, business development, and financial tasks.
 
-By creating an integrated system for volunteer management and recognition, RockRapids.XYZ strengthens the community's ability to address needs through collective action while enhancing the experience and impact of individual volunteers.
+## Resources with Specific Focus (or Strong Sections) on Career/Income
 
-## Volunteer Opportunity Database
+4. **Learn Prompting (Website/Discord)**  
+   * **Link:** [https://learnprompting.org/](https://learnprompting.org/)  
+   * **Relevance:** Offers free courses and a community focused on prompt engineering. Their materials often cover practical applications, and the community (especially on Discord) is a place where users discuss prompts for various use cases, including professional development, content creation for businesses, and task automation.  
+5. **Various Blog Posts & Articles:**  
+   * **Relevance:** Many tech blogs, career advice sites (like The Muse, LinkedIn's blog), and AI-focused newsletters regularly publish articles with specific prompts for job searching (e.g., "AI prompts to ace your next interview," "Using ChatGPT to write your resume") or business ideation ("ChatGPT prompts for brainstorming startup ideas").  
+   * **How to Find:** Use search engines with queries like:  
+     * "ChatGPT prompts for cover letter"  
+     * "AI prompts for business plan"  
+     * "Best prompts for resume update AI"  
+     * "Generate side hustle ideas using AI prompts"
 
-At the core of RockRapids.XYZ is a comprehensive database of volunteer opportunities featuring:
+## Tips for Using These Resources
 
-- **Detailed Activity Descriptions**: Clear explanations of what volunteers will do and the impact of their service
-- **Skill Requirements**: Transparent information about abilities needed for effective participation
-- **Time Commitments**: Specific details about duration, schedule, and frequency of service
-- **Location Information**: Where the volunteer work will take place, including accessibility details
-- **Supporting Organizations**: Background on the groups coordinating each opportunity
-- **Team Requirements**: Whether opportunities are suitable for individuals, families, or groups
-- **Impact Metrics**: How volunteer efforts will be measured and their expected outcomes
+* **Search Within Repos:** Use GitHub's search functionality within large repositories (like awesome-chatgpt-prompts) using keywords like "resume," "interview," "business idea," "marketing," "cover letter," etc.  
+* **Adapt and Iterate:** Prompts are starting points. You'll often need to tweak them based on the AI model you're using (GPT-4, Claude, Gemini, etc.) and your specific context. Add details about your background, the job you're applying for, or the type of business you envision.  
+* **Combine Prompts:** Chain prompts together for more complex tasks. For example, first generate business ideas, then ask the AI to evaluate the pros and cons of one specific idea, and then ask it to draft an initial marketing tagline.  
+* **Specify the Persona:** Tell the AI to act as a specific expert (e.g., "Act as a hiring manager at a tech company," "Act as a startup business consultant," "Act as a professional resume writer").
 
-This structured approach to opportunity listings ensures potential volunteers can easily identify positions that match their interests, skills, and availability, increasing the likelihood of successful matches and satisfying experiences.
-
-## Volunteer Profile System
-
-To facilitate effective matching and coordination, RockRapids.XYZ implements a volunteer profile system:
-
-- **Skills Inventory**: Self-reported abilities relevant to various volunteer roles
-- **Interest Tags**: Preference indicators for types of service opportunities
-- **Availability Calendar**: Time slots when volunteers are typically available
-- **Experience History**: Record of past volunteer activities and acquired skills
-- **Team Affiliations**: Connections to volunteer groups or organizational relationships
-- **Impact Dashboard**: Personalized view of contribution history and community impact
-- **Certification Records**: Documentation of relevant training or qualifications
-
-These comprehensive profiles help organizations quickly identify suitable volunteers for specific needs while helping individuals discover opportunities aligned with their capabilities and interests.
-
-## Real-Time Contribution Tracking
-
-Inspired by GitHub's commit graph, RockRapids.XYZ implements a visual contribution tracking system that:
-
-- **Visualizes Activity**: Creates graphical representations of volunteer hours and contributions
-- **Timestamps Service**: Records when volunteer activities occur for accurate reporting
-- **Categories Contributions**: Organizes service by type, beneficiary, and impact area
-- **Aggregates Team Efforts**: Combines individual contributions into collective impact metrics
-- **Shows Patterns**: Reveals trends in community service over time and across organizations
-- **Highlights Needs**: Identifies areas where additional volunteer support is required
-
-As detailed in [Volunteer Engagement and Commitgraph Dashboards](https://rockrapids.github.io/communication/2025/03/31/RockRapidsApps-Step0-6.html), this real-time tracking allows residents to see the tangible results of volunteer efforts, from park cleanups to food drives to emergency response initiatives. The visual representation transforms abstract service into concrete, measurable contributions, reinforcing volunteers' sense of accomplishment and community impact.
-
-## Recognition and Celebration Framework
-
-RockRapids.XYZ incorporates a multi-faceted recognition system to celebrate volunteer contributions:
-
-- **Volunteer Spotlights**: Regular features highlighting exceptional volunteers and their stories
-- **Achievement Milestones**: Recognition of service hour thresholds and sustained commitment
-- **Impact Storytelling**: Narratives connecting volunteer efforts to tangible community outcomes
-- **Public Acknowledgment**: Integration with social media for broader community recognition
-- **Appreciation Events**: Coordination of in-person celebrations of volunteer service
-- **Special Recognition Programs**: Volunteer of the Month/Year award structures
-- **Organization-Specific Appreciation**: Tools for beneficiary organizations to directly thank their volunteers
-
-This comprehensive approach ensures volunteers receive recognition that reinforces the value of their contributions and inspires continued engagement with community service.
-
-## Team Formation and Coordination
-
-For larger initiatives requiring coordinated group efforts, RockRapids.XYZ facilitates:
-
-- **Team Building Tools**: Features for assembling groups with complementary skills and availability
-- **Project Leader Resources**: Support materials for those coordinating volunteer teams
-- **Communication Channels**: Integrated messaging for team updates and coordination
-- **Task Assignment Systems**: Tools for dividing responsibilities among team members
-- **Progress Tracking**: Visual indicators of completion status for multi-stage projects
-- **Schedule Coordination**: Calendar integration for aligning team member availability
-- **Resource Management**: Tracking of materials and equipment needed for team activities
-
-These team coordination features enable more complex volunteer initiatives that might be beyond the capacity of individual efforts, expanding the community's ability to address larger challenges collectively.
-
-## Skill Development Resources
-
-Beyond matching existing skills to needs, RockRapids.XYZ actively supports volunteer capability building through:
-
-- **Training Opportunities**: Listings of workshops and courses relevant to volunteer service
-- **Skill-Building Pathways**: Suggested progression of volunteer roles to develop specific capabilities
-- **Mentorship Connections**: Matching experienced volunteers with those seeking to develop skills
-- **Resource Libraries**: Materials supporting self-directed learning in relevant areas
-- **Certification Tracking**: Documentation of completed training and demonstrated competencies
-- **Career Connection Guidance**: Information on how volunteer skills translate to employment contexts
-- **Leadership Development**: Resources specifically focused on volunteer coordination and team management
-
-This developmental approach recognizes that volunteer service can be a powerful context for personal growth, providing volunteers with benefits beyond the intrinsic satisfaction of helping others.
-
-## Meaningful Impact Measurement
-
-To help volunteers and the broader community understand the significance of volunteer contributions, RockRapids.XYZ incorporates:
-
-- **Quantitative Metrics**: Measurement of hours served, people assisted, and other numerical indicators
-- **Qualitative Assessments**: Stories and testimonials highlighting the human impact of volunteer work
-- **Economic Valuation**: Calculations of the financial value of volunteer contributions
-- **Longitudinal Tracking**: Monitoring of long-term trends in community engagement
-- **Comparative Benchmarking**: Context for understanding Rock Rapids' volunteer activity relative to similar communities
-- **Goal Visualization**: Progress indicators for community-wide volunteer objectives
-- **Outcome Documentation**: Evidence linking volunteer efforts to tangible community improvements
-
-These measurement approaches help validate the importance of volunteer work while providing evidence for grant applications, community planning, and other contexts where demonstrating civic engagement is valuable.
-
-## Minimal Viable Prototype Development Roadmap
-
-1. **Prerequisite Research**: Before launching anything, understand the [design philosophy](#design-philosophy) and gather intelligence on existing volunteer efforts and coordination methods.
-
-2. **Architecture Development**: Create a general knowledgebase architecture to support a directory of volunteer opportunities with details on organizations, time commitments, and skills needed, using the [technical architecture](https://rockrapids.github.io/communication/2025/03/29/RockRapidsApps.html#technical-architecture-1) with Remix as the primary framework.
-
-3. **Volunteer Profiles**: Develop a volunteer profile system allowing users to list their skills, availability, and interests for improved matching.
-
-4. **Application Process**: Build a simple application process for volunteers to express interest in specific opportunities and connect with organizers.
-
-5. **Recognition System**: Implement a basic recognition system for highlighting outstanding volunteer contributions through regular spotlights.
-
-6. **Progress Tracking**: Develop a project tracking dashboard showing progress on community initiatives and volunteer participation.
-
-7. **Launch Strategy**: Debut the platform with 10-15 active volunteer opportunities from different community organizations to demonstrate immediate value.
-
-## Design Philosophy
-
-As with all Rock Rapids applications, RockRapids.XYZ adheres to a design philosophy focused on sustainability and practicality. This approach emphasizes:
-
-- **Reusing what has worked and will continue to be used**, rather than re-inventing new solutions
-- **Connecting existing systems and filling gaps** to create greater value
-- **Building simple solutions that future volunteers can maintain and improve**
-
-This philosophy is elaborated in several key strategic documents:
-
-- [Integrate Necessary Existing and Future Datastores](https://rockrapids.github.io/communication/2025/03/31/RockRapidsApps-Step0-1.html): Leveraging existing data sources while preparing for evolving technologies
-- [Understand Local Participation In Online Platforms](https://rockrapids.github.io/communication/2025/03/31/RockRapidsApps-Step0-2.html): Building on established digital behavior patterns
-- [Evaluate Local Platforms and Their Reach](https://rockrapids.github.io/communication/2025/03/31/RockRapidsApps-Step0-3.html): Understanding the existing digital landscape
-- [Design For Maintainability and Extensibility](https://rockrapids.github.io/communication/2025/03/31/RockRapidsApps-Step0-4.html): Creating systems that can be sustained by volunteer contributors
-- [Think About Where the App Ecosystem Will Be Built and Then Live](https://rockrapids.github.io/communication/2025/03/31/RockRapidsApps-Step0-5.html): Considering the practical aspects of hosting and maintenance
-
-## Sister Applications
-
-RockRapids.XYZ is part of a suite of specialized applications, each addressing specific aspects of community life:
-
-- [Rockrapids.INFO](https://rockrapids.github.io/FOSS/0/): The central hub and gateway to all Rock Rapids applications
-- [Rockrapids.ART](https://rockrapids.github.io/FOSS/1/): Showcasing local arts, crafts, and creative endeavors
-- [Rockrapids.FUN](https://rockrapids.github.io/FOSS/2/): Highlighting recreational activities and entertainment options
-- [Rockrapids.GUIDE](https://rockrapids.github.io/FOSS/3/): Providing civic, school, church, and service provider information
-- [Rockrapids.SHOP](https://rockrapids.github.io/FOSS/4/): Featuring retail promotions and shopping events
-- [Rockrapids.STORE](https://rockrapids.github.io/FOSS/5/): Listing marketplace items and local products for sale
-- [Rockrapids.WORK](https://rockrapids.github.io/FOSS/6/): Connecting people with employment opportunities
-
-Together, these applications form a comprehensive digital ecosystem designed to serve the diverse needs of the Rock Rapids community.
+By exploring these resources and experimenting with different prompts, you can leverage AI more effectively to achieve your career and financial goals.
