--- a/INFO/1.md
+++ b/INFO/1.md
@@ -1,6 +1,6 @@
 ---
 layout: page
-title: 1) Featured
+title: 1.Features
 permalink: /FOSS/1/
 ---
 # HOT Front Page Content: Featured items from sister applications based on relevance and timeliness
