--- a/INFO/4.md
+++ b/INFO/4.md
@@ -1,6 +1,6 @@
 ---
 layout: page
-title: 4) Faith
-permalink: /FOSS/1/
+title: 4.Faith
+permalink: /FOSS/4/
 ---
-# Featured Devotional or Message Of Faith
+# Featured Sermon, Devotional, Inspired Message Of Faith
