--- a/INFO/7.md
+++ b/INFO/7.md
@@ -1,9 +1,9 @@
 ---
 layout: page
-title: 7) Search/AI
+title: 7.Srch/AI
 permalink: /INFO/7/
 ---
-# Searches/AI Resources
+# Searches/AI Prompts/Ways To Generate Ideas or Find Resources
 
 ## AI Prompt Resources for Job Hunting, Resumes, Side Hustles & Income
 
