--- a/INFO/8.md
+++ b/INFO/8.md
@@ -1,9 +1,9 @@
 ---
 layout: page
-title: 8) About
+title: 8.About
 permalink: /Info/8/
 ---
-# Explaining The Rock Rapids INFO Central Hub
+# Explaining what the Rock Rapids INFO central hub is about
 
 ## Table of Contents
 - [Introduction](#introduction)
