--- a/INFO/911.md
+++ b/INFO/911.md
@@ -1,6 +1,6 @@
 ---
 layout: page
-title: 911) Emergency
+title: 911
 permalink: /INFO/911/
 ---
-# Emergency Information: Critical alerts and resources during community emergencies
+# EMERGENCY Information: Critical alerts and resources during community emergencies, such as flooding or disasters
