--- a/INFO/4.md
+++ b/INFO/4.md
@@ -4,3 +4,27 @@ title: 4.Faith
 permalink: /FOSS/4/
 ---
 # Featured Sermon, Devotional, Inspired Message Of Faith
+
+
+**Jesus is first!**
+
+Putting Jesus FIRST ... what visiting prison or jail reminds me of ... JOY!
+
+J O Y!!!
+
+J esus has to come first, above everything and ahead of all else
+
+O ther people and other principles, eg Constitution or rule of law, are to be loved equally ... as we love ourselves ... but a distant second to Jesus 
+ 
+Y ou ... get to experience JOY when your priorities are correct ... when we focus on ourselves, we're just left with a big Y ... WHY should anyone expect joY out of just a life focused on Y?
+
+
+JOY also reminds me that I believe in JESUS ... not churches, civic orgs, City govt ... the churches that put their church first are COY, ie prone to passing the COLLECTION plate or COERCIVELY taxing citizens ... in order to keep their "machine" operating ... rather than focusing on JESUS.
+
+**Jesus has to come first!**
+
+Visiting prison or jail reminds me of JOY.
+
+Jesus has to be first.
+
+Anyone who puts ME first ... belongs in some kind of prison ... a ME prison ... but certainly deserves to suffer, be tortured and more miserable until they die as some sort of ME martyr that nobody should care about.
