--- a/INFO/1.md
+++ b/INFO/1.md
@@ -1,7 +1,7 @@
 ---
 layout: page
-title: 1.Features
-permalink: /FOSS/1/
+title: Features
+permalink: /INFO/1/
 ---
 # HOT Front Page Content: Featured items from sister applications based on relevance and timeliness
 
