--- a/INFO/2.md
+++ b/INFO/2.md
@@ -1,6 +1,6 @@
 ---
 layout: page
-title: 2.Cal
-permalink: /FOSS/2/
+title: Calendar
+permalink: /INFO/2/
 ---
 ## Community Calendar: A consolidated view of upcoming events from multiple sources
