--- a/INFO/4.md
+++ b/INFO/4.md
@@ -1,12 +1,12 @@
 ---
 layout: page
-title: 4.Faith
-permalink: /FOSS/4/
+title: Faith
+permalink: /INFO/4/
 ---
-# Featured Sermon, Devotional, Inspired Message Of Faith
+# Faith, Hope, Joy, Uplifting Spiritual Message
 
 
-**Jesus is first!**
+## **Jesus is first!**
 
 Putting Jesus FIRST ... what visiting prison or jail reminds me of ... JOY!
 
