--- a/INFO/6.md
+++ b/INFO/6.md
@@ -1,7 +1,7 @@
 ---
 layout: page
-title: 6.Links
-permalink: /FOSS/6/
+title: Links
+permalink: /INFO/6/
 ---
 
 # Curated, annotated lists of AWESOME sources Of information, frequently used services and resources
