--- a/INFO/911.md
+++ b/INFO/911.md
@@ -1,6 +1,6 @@
 ---
 layout: page
-title: 911
+title: EMERGENCY
 permalink: /INFO/911/
 ---
 # EMERGENCY Information: Critical alerts and resources during community emergencies, such as flooding or disasters
