--- a/INFO/5.md
+++ b/INFO/5.md
@@ -1,7 +1,7 @@
 ---
 layout: page
-title: 5.Opin
-permalink: /FOSS/5/
+title: Opinion
+permalink: /INFO/5/
 ---
 # Featured Essay On What Makes Rock Rapids Strong/Weak OR Some Opportunity or Threat To Be Addressed
 
