--- a/INFO/7.md
+++ b/INFO/7.md
@@ -1,9 +1,9 @@
 ---
 layout: page
-title: 7.Srch/AI
+title: Search/AI
 permalink: /INFO/7/
 ---
-# Searches/AI Prompts/Ways To Generate Ideas or Find Resources
+# Searches and AI Prompts for different ways to generate ideas or find resources
 
 ## AI Prompt Resources for Job Hunting, Resumes, Side Hustles & Income
 
