--- a/INFO/8.md
+++ b/INFO/8.md
@@ -1,6 +1,6 @@
 ---
 layout: page
-title: 8.About
+title: About
 permalink: /Info/8/
 ---
 # Explaining what the Rock Rapids INFO central hub is about
