--- a/INFO/8.md
+++ b/INFO/8.md
@@ -3,7 +3,13 @@ layout: page
 title: About
 permalink: /Info/8/
 ---
-# Explaining what the Rock Rapids INFO central hub is about
+This is about **building** a suite of communication apps.
+
+It is a work-in-progress, but basically an online requirements specification document that will eventually be made exectutable or converted into a dynamic iOS/Android app. 
+
+What you see here is NOT the app itself ... what you are looking at on these pages is a set of static Markdown pages are rendered into HTML pages. 
+
+This is NOT an app, but rather that attempt to explain how an app or ecosystem of tightly related communication apps for Rock Rapids will be built. 
 
 ## Table of Contents
 - [Introduction](#introduction)
